--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beginner",
+  "name": "beginner-layouts",
   "version": "0.0.0",
   "description": "Dynamic broadcast graphics rendered in a browser",
   "homepage": "http://nodecg.com/",
