--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "nodecg-bundle"
   ],
   "nodecg": {
-    "compatibleRange": "0.9.10",
+    "compatibleRange": "^1.1.1",
     "dashboardPanels": [
       {
         "name": "score",
