--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Dynamic broadcast graphics rendered in a browser",
   "homepage": "http://nodecg.com/",
   "author": {
-    "name": "Club Who",
-    "email": "clubwhomc@gmail.com",
+    "name": "Clubwho",
+    "email": "",
     "url": "N/A"
   },
   "files": [
